Fix CRenderStage